# dashboard_01

./: .gitignore  AUTO_SIZING_IMPLEMENTATION.md  CONTRIBUTING.md  MIGRATION_SUMMARY.md  README.md  SETUP_SUMMARY.md  main.py  mkdocs.yml  pyproject.toml  requirements.txt
.cache/: charts.json
.github/workflows/: build-and-deploy.yml  deploy.yml
archive/: index.md  sales-analysis.md  sample-plot.md  sample-table-embed.md  sample-table.md  test.html
archive/Embuild_vergunningen_story/: vergunningen-area.html
archive/my-analysis-report/: asset.yml
archive/sales-analysis/: asset.yml  sales-overview.html  sales-scatter.html
archive/sample-plot/: asset.yml
archive/sample-table/: asset.yml
docs/: index.md
docs/_data/: charts.yml  site.yml
docs/assets/: Embuild_vergunningen_story-embed.md  Embuild_vergunningen_story.md  bouwbedrijven-starters-stoppers.md  bouwbedrijven-totaal.md  bouwbedrijven-yoy.md  my-analysis-report-embed.md  my-analysis-report.md  reports-vergunningen-2025-charts-sloop-embed.md  reports-vergunningen-2025-charts-sloop.md  reports-vergunningen-2025-charts-verbouwen-embed.md  reports-vergunningen-2025-charts-verbouwen.md  sales-analysis-embed.md  sample-plot-embed.md  vergunningen-nieuwbouw.md  (+4 more)
macros/: __init__.py  asset_pages.py  assets.py  charts.py  downloads.py  metadata.py
scripts/: build_all_reports.py  build_charts.py  build_charts_simple.py  build_report.py  gen_assets_pages.py  generate_embed_pages.py  json_to_csv_bouwbedrijven.py  new_report.py  organize_assets.py  validate_assets.py  validate_report.py
templates/: main.html
(+100 files in other folders)
